--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.0.6",
     "mongoose": "^7.0.3",
     "next": "13.0.6",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
